# drone_ws

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: drone_1.param  drone_2.param  drone_3.param  drone_4.param  drone_5.param  drone_6.param  drone_7.param  drone_8.param  drone_9.param
drones/drone1/: model.config  model.sdf
drones/drone2/: model.config
drones/drone4/: model.config
drones/drone5/: model.config  model.sdf
drones/drone6/: model.config  model.sdf
drones/drone7/: model.config  model.sdf
drones/drone8/: model.config
drones/drone9/: model.config  model.sdf
include/drone_control/: gnc_functions.hpp  test_functions.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_control/share/drone_control/: package.dsv  package.ps1  package.sh
launch/: apm.launch  launch_drone.py
log/: latest_build
models/ambulance2/2/: model.sdf
models/apartment/2/: model.sdf
models/collapsed industrial building/3/: model.sdf
models/drone2/: model.sdf
models/drone3/: model.sdf
models/drone4/: model.sdf
models/drone8/: model.sdf
models/fire/2/: model.sdf
models/grasspatch/1/: model.sdf
models/law office/3/: model.sdf
models/office building/3/: model.sdf
models/osrf first office/3/: model.sdf
models/post office/3/: model.sdf
models/room_wall_2x5m/1/: model.sdf
models/school/3/: model.sdf
scripts/: launch_drones.py  launch_mavros_drone.py
src/: square.cpp  takeoff_function.cpp  takeoff_node.cpp  test.cpp
worlds/: empty_drone.sdf  four_drone.sdf  hills_world.sdf  impact_site.sdf  matrix_drone.sdf  multi_drone_empty.sdf
